--- a/NavBar_Responsive_Animated/index.html
+++ b/NavBar_Responsive_Animated/index.html
@@ -10,35 +10,30 @@
 
 <body>
     <nav>
-        <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li class="hide-on-mobile"><a href="#">Products</a></li>
-            <li class="hide-on-mobile"><a href="#">About</a></li>
-            <li class="hide-on-mobile"><a href="#">Forum</a></li>
-            <li class="hide-on-mobile"><a href="#">Login</a></li>
-            <li class="show-on-mobile">
-                <input type="checkbox" id="sidebar-active" />
-                <label for="sidebar-active">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                        fill="#e8eaed">
-                        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
-                    </svg>
-                </label>
-            </li>
-        </ul>
-        <ul class="sidebar">
-            <li><label for="sidebar-active">
+        <input type="checkbox" id="sidebar-active">
+        <label for="sidebar-active" class="open-sidebar-button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+                <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+            </svg>
+        </label>
+        <label id="overlay" for="sidebar-active"></label>
+        <div class="sidebar">
+            <label for="sidebar-active" class="close-sidebar-button">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                     fill="#e8eaed">
                     <path
                         d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
                 </svg>
-            </label></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Forum</a></li>
-            <li><a href="#">Login</a></li>
-        </ul>
+            </label>
+            <ul>
+                <li class="home-link"><a href="#">TuanKhaDev</a></li>
+                <li class="hide-on-mobile"><a href="#">Blog</a></li>
+                <li class="hide-on-mobile"><a href="#">Products</a></li>
+                <li class="hide-on-mobile"><a href="#">About</a></li>
+                <li class="hide-on-mobile"><a href="#">Forum</a></li>
+                <li class="hide-on-mobile"><a href="#">Login</a></li>
+            </ul>
+        </div>
     </nav>
 </body>
 
